[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "pytest >= 7.4.0"]

build-backend = "scikit_build_core.build"

[project]
name = "pypsdr"
version = "0.0.1"
description = "Planar Shape Detection and Refinement"
readme = "../README.md"
requires-python = ">=3.8"
authors = [
    { name = "Raphael Sulzer", email = "raphaelsulzer@gmx.de" },
]

[project.urls]
Homepage = "https://github.com/raphaelsulzer/psdr"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/scikit"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 3

# Run pytest to ensure that the package was correctly built
test-command = "python -m unittest test.py"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"